# dataset_factory

./: README.md  README.ru.md  pyproject.toml
src/dataset_factory/: __init__.py  base_iterator.py  examples.py  factory.py  interfaces.py  models.py  registry.py
src/dataset_factory/iterators/: __init__.py  snils.py
tests/: test_factory.py
